@@ -1,40 +1,34 @@
 package com.objectcomputing.checkins.services.feedback_answer;
 
-import com.objectcomputing.checkins.security.permissions.Permissions;
+import com.objectcomputing.checkins.services.permissions.Permission;
 import com.objectcomputing.checkins.services.permissions.RequiredPermission;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.http.HttpResponse;
-import io.micronaut.http.annotation.*;
+import io.micronaut.http.annotation.Body;
+import io.micronaut.http.annotation.Controller;
+import io.micronaut.http.annotation.Get;
+import io.micronaut.http.annotation.Post;
+import io.micronaut.http.annotation.Put;
 import io.micronaut.scheduling.TaskExecutors;
+import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.rules.SecurityRule;
-import io.netty.channel.EventLoopGroup;
-import jakarta.inject.Named;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Schedulers;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
 import java.net.URI;
 import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.ExecutorService;
-import java.util.stream.Collectors;
 
 @Controller("/services/feedback/answers")
+@ExecuteOn(TaskExecutors.BLOCKING)
 @Secured(SecurityRule.IS_AUTHENTICATED)
 public class FeedbackAnswerController {
 
     private final FeedbackAnswerServices feedbackAnswerServices;
-    private final EventLoopGroup eventLoopGroup;
-    private final ExecutorService executorService;
 
-    public FeedbackAnswerController(FeedbackAnswerServices feedbackAnswerServices,
-                                    EventLoopGroup eventLoopGroup,
-                                    @Named(TaskExecutors.IO) ExecutorService executorService) {
+    public FeedbackAnswerController(FeedbackAnswerServices feedbackAnswerServices) {
         this.feedbackAnswerServices = feedbackAnswerServices;
-        this.eventLoopGroup = eventLoopGroup;
-        this.executorService = executorService;
     }
 
     /**
@@ -43,14 +37,11 @@ public class FeedbackAnswerController {
      * @param requestBody {@link FeedbackAnswerCreateDTO} New feedback answer to create
      * @return {@link FeedbackAnswerResponseDTO}
      */
-    @Post()
-    public Mono<HttpResponse<FeedbackAnswerResponseDTO>> save(@Body @Valid @NotNull FeedbackAnswerCreateDTO requestBody) {
-        return Mono.fromCallable(() -> feedbackAnswerServices.save(fromDTO(requestBody)))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedAnswer -> (HttpResponse<FeedbackAnswerResponseDTO>) HttpResponse
-                        .created(fromEntity(savedAnswer))
-                        .headers(headers -> headers.location(URI.create("/feedback_answer/" + savedAnswer.getId()))))
-                .subscribeOn(Schedulers.fromExecutor(executorService));
+    @Post
+    public HttpResponse<FeedbackAnswerResponseDTO> save(@Body @Valid @NotNull FeedbackAnswerCreateDTO requestBody) {
+        FeedbackAnswer savedAnswer = feedbackAnswerServices.save(fromDTO(requestBody));
+        return HttpResponse.created(fromEntity(savedAnswer))
+                .headers(headers -> headers.location(URI.create("/feedback_answer/" + savedAnswer.getId())));
     }
 
     /**
@@ -59,15 +50,11 @@ public class FeedbackAnswerController {
      * @param requestBody {@link FeedbackAnswerUpdateDTO} The updated feedback answer
      * @return {@link FeedbackAnswerResponseDTO}
      */
-    @Put()
-    public Mono<HttpResponse<FeedbackAnswerResponseDTO>> update(@Body @Valid @NotNull FeedbackAnswerUpdateDTO requestBody) {
-        return Mono.fromCallable(() -> feedbackAnswerServices.update(fromDTO(requestBody)))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedAnswer -> (HttpResponse<FeedbackAnswerResponseDTO>) HttpResponse
-                        .ok()
-                        .headers(headers -> headers.location(URI.create("/feedback_answer/" + savedAnswer.getId())))
-                        .body(fromEntity(savedAnswer)))
-                .subscribeOn(Schedulers.fromExecutor(executorService));
+    @Put
+    public HttpResponse<FeedbackAnswerResponseDTO> update(@Body @Valid @NotNull FeedbackAnswerUpdateDTO requestBody) {
+        FeedbackAnswer savedAnswer = feedbackAnswerServices.update(fromDTO(requestBody));
+        return HttpResponse.ok(fromEntity(savedAnswer))
+                .headers(headers -> headers.location(URI.create("/feedback_answer/" + savedAnswer.getId())));
     }
 
     /**
@@ -76,15 +63,12 @@ public class FeedbackAnswerController {
      * @param id {@link UUID} ID of the feedback answer
      * @return {@link FeedbackAnswerResponseDTO}
      */
-    @RequiredPermission(Permissions.CAN_VIEW_FEEDBACK_ANSWER)
     @Get("/{id}")
-    public Mono<HttpResponse<FeedbackAnswerResponseDTO>> getById(UUID id) {
-        return Mono.fromCallable(() -> feedbackAnswerServices.getById(id))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedAnswer -> (HttpResponse<FeedbackAnswerResponseDTO>) HttpResponse
-                        .ok(fromEntity(savedAnswer))
-                        .headers(headers -> headers.location(URI.create("/feedback_answer/" +  savedAnswer.getId()))))
-                .subscribeOn(Schedulers.fromExecutor(executorService));
+    @RequiredPermission(Permission.CAN_VIEW_FEEDBACK_ANSWER)
+    public HttpResponse<FeedbackAnswerResponseDTO> getById(UUID id) {
+        FeedbackAnswer savedAnswer = feedbackAnswerServices.getById(id);
+        return HttpResponse.ok(fromEntity(savedAnswer))
+                .headers(headers -> headers.location(URI.create("/feedback_answer/" + savedAnswer.getId())));
     }
 
     /**
@@ -92,19 +76,16 @@ public class FeedbackAnswerController {
      * Any values that are null are not applied to the intersection
      *
      * @param questionId The attached {@link UUID} of the related question
-     * @param requestId The attached {@link UUID} of the request that corresponds with the answer
+     * @param requestId  The attached {@link UUID} of the request that corresponds with the answer
      * @return {@link FeedbackAnswerResponseDTO}
      */
-    @RequiredPermission(Permissions.CAN_VIEW_FEEDBACK_ANSWER)
     @Get("/{?questionId,requestId}")
-    public Mono<HttpResponse<List<FeedbackAnswerResponseDTO>>> findByValues(@Nullable UUID questionId, @Nullable UUID requestId) {
-        return Mono.fromCallable(() -> feedbackAnswerServices.findByValues(questionId, requestId))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(feedbackAnswers -> {
-                    List<FeedbackAnswerResponseDTO> dtoList = feedbackAnswers.stream()
-                            .map(this::fromEntity).collect(Collectors.toList());
-                    return (HttpResponse<List<FeedbackAnswerResponseDTO>>) HttpResponse.ok(dtoList);
-                }).subscribeOn(Schedulers.fromExecutor(executorService));
+    @RequiredPermission(Permission.CAN_VIEW_FEEDBACK_ANSWER)
+    public List<FeedbackAnswerResponseDTO> findByValues(@Nullable UUID questionId, @Nullable UUID requestId) {
+        return feedbackAnswerServices.findByValues(questionId, requestId)
+                .stream()
+                .map(this::fromEntity)
+                .toList();
     }
 
     private FeedbackAnswer fromDTO(FeedbackAnswerCreateDTO dto) {
