@@ -1,61 +1,83 @@
 package com.objectcomputing.checkins.services.feedback_request;
 
+import com.objectcomputing.checkins.configuration.CheckInsConfiguration;
 import com.objectcomputing.checkins.exceptions.BadArgException;
 import com.objectcomputing.checkins.exceptions.NotFoundException;
 import com.objectcomputing.checkins.exceptions.PermissionException;
 import com.objectcomputing.checkins.notifications.email.EmailSender;
-import com.objectcomputing.checkins.notifications.email.MailJetConfig;
+import com.objectcomputing.checkins.notifications.email.MailJetFactory;
+import com.objectcomputing.checkins.services.email.Email;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
+import com.objectcomputing.checkins.services.memberprofile.MemberProfileUtils;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileServices;
 import com.objectcomputing.checkins.services.memberprofile.currentuser.CurrentUserServices;
+import com.objectcomputing.checkins.services.reviews.ReviewAssignment;
+import com.objectcomputing.checkins.services.reviews.ReviewAssignmentRepository;
+import com.objectcomputing.checkins.services.reviews.ReviewPeriod;
+import com.objectcomputing.checkins.services.reviews.ReviewPeriodRepository;
 import com.objectcomputing.checkins.util.Util;
-import io.micronaut.context.annotation.Property;
+import io.micronaut.context.annotation.Value;
+import io.micronaut.core.io.Readable;
+import io.micronaut.core.io.IOUtils;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.BufferedReader;
+import java.time.format.DateTimeFormatter;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import static com.objectcomputing.checkins.services.validate.PermissionsValidation.NOT_AUTHORIZED_MSG;
 
 @Singleton
 public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
     private static final Logger LOG = LoggerFactory.getLogger(FeedbackRequestServicesImpl.class);
 
-    public static final String FEEDBACK_REQUEST_NOTIFICATION_SUBJECT = "check-ins.application.feedback.notifications.subject";
-    public static final String FEEDBACK_REQUEST_NOTIFICATION_CONTENT = "check-ins.application.feedback.notifications.content";
-    public static final String WEB_UI_URL = "check-ins.web-address";
     private final FeedbackRequestRepository feedbackReqRepository;
     private final CurrentUserServices currentUserServices;
     private final MemberProfileServices memberProfileServices;
-    private EmailSender emailSender;
+    private final ReviewPeriodRepository reviewPeriodRepository;
+    private final ReviewAssignmentRepository reviewAssignmentRepository;
+    private final EmailSender emailSender;
     private final String notificationSubject;
     private final String webURL;
+
+    private enum CompletionEmailType { REVIEWERS, SUPERVISOR }
+    private record ReviewPeriodInfo(String subject, LocalDate closeDate) {}
+    @Value("classpath:mjml/feedback_request.mjml")
+    private Readable feedbackRequestTemplate;
+    @Value("classpath:mjml/update_request.mjml")
+    private Readable updateRequestTemplate;
+    @Value("classpath:mjml/reviewer_email.mjml")
+    private Readable reviewerTemplate;
+    @Value("classpath:mjml/supervisor_email.mjml")
+    private Readable supervisorTemplate;
 
     public FeedbackRequestServicesImpl(FeedbackRequestRepository feedbackReqRepository,
                                        CurrentUserServices currentUserServices,
                                        MemberProfileServices memberProfileServices,
-                                       @Named(MailJetConfig.HTML_FORMAT) EmailSender emailSender,
-                                       @Property(name = FEEDBACK_REQUEST_NOTIFICATION_SUBJECT) String notificationSubject,
-                                       @Property(name = WEB_UI_URL) String webURL
-    )
-            {
+                                       ReviewPeriodRepository reviewPeriodRepository,
+                                       ReviewAssignmentRepository reviewAssignmentRepository,
+                                       @Named(MailJetFactory.MJML_FORMAT) EmailSender emailSender,
+                                       CheckInsConfiguration checkInsConfiguration
+    ) {
         this.feedbackReqRepository = feedbackReqRepository;
         this.currentUserServices = currentUserServices;
         this.memberProfileServices = memberProfileServices;
+        this.reviewPeriodRepository = reviewPeriodRepository;
+        this.reviewAssignmentRepository = reviewAssignmentRepository;
         this.emailSender = emailSender;
-        this.notificationSubject = notificationSubject;
-        this.webURL = webURL;
-    }
-
-    public void setEmailSender(EmailSender emailSender) {
-        this.emailSender = emailSender;
+        this.notificationSubject = checkInsConfiguration.getApplication().getFeedback().getRequestSubject();
+        this.webURL = checkInsConfiguration.getWebAddress();
     }
 
     private void validateMembers(FeedbackRequest feedbackRequest) {
@@ -82,7 +104,7 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
     public FeedbackRequest save(FeedbackRequest feedbackRequest) {
         validateMembers(feedbackRequest);
         if (!createIsPermitted(feedbackRequest.getRequesteeId())) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         if (feedbackRequest.getId() != null) {
@@ -90,30 +112,43 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
         }
 
 
-        if (feedbackRequest.getDueDate() != null && feedbackRequest.getSendDate().isAfter(feedbackRequest.getDueDate())){
+        if (feedbackRequest.getDueDate() != null && feedbackRequest.getSendDate().isAfter(feedbackRequest.getDueDate())) {
             throw new BadArgException("Send date of feedback request must be before the due date.");
         }
-
+        String status = feedbackRequest.getSendDate().isAfter(LocalDate.now()) ? "pending" : "sent";
+        feedbackRequest.setStatus(status);
         FeedbackRequest storedRequest = feedbackReqRepository.save(feedbackRequest);
-        sendNewRequestEmail(storedRequest);
+        if (feedbackRequest.getSendDate().equals(LocalDate.now())) {
+            sendNewRequestEmail(storedRequest);
+        }
         return storedRequest;
     }
 
-    private void sendNewRequestEmail(FeedbackRequest storedRequest) {
+    public void sendNewRequestEmail(FeedbackRequest storedRequest) {
         MemberProfile creator = memberProfileServices.getById(storedRequest.getCreatorId());
+        MemberProfile reviewer = memberProfileServices.getById(storedRequest.getRecipientId());
         MemberProfile requestee = memberProfileServices.getById(storedRequest.getRequesteeId());
-        String senderName = creator.getFirstName() + " " + creator.getLastName();
-        String newContent = "<h1>You have received a feedback request.</h1>" +
-                "<p><b>" + senderName + "</b> is requesting feedback on <b>" + requestee.getFirstName() + " " + requestee.getLastName() + "</b> from you.</p>";
-        if (storedRequest.getDueDate() != null) {
-            newContent += "<p>This request is due on " + storedRequest.getDueDate().getMonth() + " " + storedRequest.getDueDate().getDayOfMonth()+ ", " + storedRequest.getDueDate().getYear() + ".";
-        }
-        newContent += "<p>Please go to your unique link at " + webURL + "/feedback/submit?request=" + storedRequest.getId() + " to complete this request.</p>";
+        String senderName = MemberProfileUtils.getFullName(creator);
 
-//        LOG.warn("Pretending to send an email about the new request to "+memberProfileServices.getById(storedRequest.getRecipientId()).getFirstName());
-        if(!storedRequest.getRecipientId().equals(storedRequest.getRequesteeId())) {
-            emailSender.sendEmail(senderName, creator.getWorkEmail(), notificationSubject, newContent, memberProfileServices.getById(storedRequest.getRecipientId()).getWorkEmail());
-        }
+        String newContent = String.format(
+                                templateToString(feedbackRequestTemplate),
+                                reviewer.getFirstName(), senderName,
+                                storedRequest.getRecipientId().equals(storedRequest.getRequesteeId()) ?
+                                  "" :
+                                  String.format("on <strong>%s</strong> ",
+                                                MemberProfileUtils.getFullName(requestee)),
+                                storedRequest.getDueDate() == null ?
+                                    "This request does not have a due date." :
+                                    String.format("This request is due on %s %d, %d.",
+                                                  storedRequest.getDueDate().getMonth(),
+                                                  storedRequest.getDueDate().getDayOfMonth(),
+                                                  storedRequest.getDueDate().getYear()),
+                                String.format("%s/feedback/submit?request=%s",
+                                              webURL, storedRequest.getId().toString()));
+
+        emailSender.sendEmail(senderName, creator.getWorkEmail(),
+                              notificationSubject, newContent,
+                              reviewer.getWorkEmail());
     }
 
     @Override
@@ -137,20 +172,25 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
         validateMembers(originalFeedback);
 
+        Set<ReviewAssignment> reviewAssignmentsSet = Set.of();
+        if (feedbackRequest != null && feedbackRequest.getReviewPeriodId() != null && feedbackRequest.getRequesteeId() != null) {
+            reviewAssignmentsSet = reviewAssignmentRepository.findByReviewPeriodIdAndRevieweeId(feedbackRequest.getReviewPeriodId(), feedbackRequest.getRequesteeId());
+        }        
+
         boolean reassignAttempted = !Objects.equals(originalFeedback.getRecipientId(), feedbackRequest.getRecipientId());
         boolean dueDateUpdateAttempted = !Objects.equals(originalFeedback.getDueDate(), feedbackRequest.getDueDate());
         boolean submitDateUpdateAttempted = !Objects.equals(originalFeedback.getSubmitDate(), feedbackRequest.getSubmitDate());
 
         // If a status update is made to anything other than submitted by the requestee, throw an error.
-        if (!feedbackRequest.getStatus().equals("submitted") && !Objects.equals(originalFeedback.getStatus(), feedbackRequest.getStatus())) {
-            if(currentUserServices.getCurrentUser().getId().equals(originalFeedback.getRequesteeId())) {
-                throw new PermissionException("You are not authorized to do this operation");
-            }
+        if (!"submitted".equals(feedbackRequest.getStatus())
+                && !Objects.equals(originalFeedback.getStatus(), feedbackRequest.getStatus())
+                && currentUserServices.getCurrentUser().getId().equals(originalFeedback.getRequesteeId())) {
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         if (reassignAttempted) {
-            if(!reassignIsPermitted(originalFeedback)) {
-                throw new PermissionException("You are not authorized to do this operation");
+            if (!reassignIsPermitted(originalFeedback)) {
+                throw new PermissionException(NOT_AUTHORIZED_MSG);
             }
             feedbackRequest.setStatus("sent");
         }
@@ -160,36 +200,36 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
         }
 
         if (dueDateUpdateAttempted && !updateDueDateIsPermitted(originalFeedback)) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         if (dueDateUpdateAttempted && !updateDueDateIsPermitted(originalFeedback)) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         if (submitDateUpdateAttempted && !updateSubmitDateIsPermitted(originalFeedback)) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
-        if (feedbackRequest.getDueDate() != null && originalFeedback.getSendDate().isAfter(feedbackRequest.getDueDate())){
+        if (feedbackRequest.getDueDate() != null && originalFeedback.getSendDate().isAfter(feedbackRequest.getDueDate())) {
             throw new BadArgException("Send date of feedback request must be before the due date.");
         }
 
         FeedbackRequest storedRequest = feedbackReqRepository.update(feedbackRequest);
-
+        MemberProfile reviewer = memberProfileServices.getById(storedRequest.getRecipientId());
+        MemberProfile requestee = memberProfileServices.getById(storedRequest.getRequesteeId());
         // Send email if the feedback request has been reopened for edits
         if (originalFeedback.getStatus().equals("submitted") && feedbackRequest.getStatus().equals("sent")) {
             MemberProfile creator = memberProfileServices.getById(storedRequest.getCreatorId());
-            MemberProfile requestee = memberProfileServices.getById(storedRequest.getRequesteeId());
-            String senderName = creator.getFirstName() + " " + creator.getLastName();
-            String newContent = "<h1>You have received edit access to a feedback request.</h1>" +
-                    "<p><b>" + senderName +
-                    "</b> has reopened the feedback request on <b>" +
-                    requestee.getFirstName() + " " + requestee.getLastName() + "</b> from you." +
-                    "You may make changes to your answers, but you will need to submit the form again when finished.</p>";
-            newContent += "<p>Please go to your unique link at " + webURL + "/feedback/submit?request=" + storedRequest.getId() + " to complete this request.</p>";
-//            LOG.warn("Pretending to send an email about the reopened request to "+memberProfileServices.getById(storedRequest.getRecipientId()).getFirstName());
-            emailSender.sendEmail(senderName, creator.getWorkEmail(), notificationSubject, newContent, memberProfileServices.getById(storedRequest.getRecipientId()).getWorkEmail());
+            String senderName = MemberProfileUtils.getFullName(creator);
+            String newContent = String.format(
+                                  templateToString(updateRequestTemplate),
+                                  reviewer.getFirstName(), senderName,
+                                  MemberProfileUtils.getFullName(requestee),
+                                  String.format("%s/feedback/submit?request=%s",
+                                                webURL, storedRequest.getId().toString()));
+
+            emailSender.sendEmail(senderName, creator.getWorkEmail(), notificationSubject, newContent, reviewer.getWorkEmail());
         }
 
         // Send email if the feedback request has been reassigned
@@ -197,22 +237,33 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
             sendNewRequestEmail(storedRequest);
         }
 
+        // Send self-review completion email to supervisor and pdl if appropriate
+        if (currentUserServices.getCurrentUser().getId().equals(requestee.getId())) {
+            sendSelfReviewCompletionEmailToSupervisor(feedbackRequest);
+        }
+
+        // Send email to reviewers.  But, only when the requestee is the
+        // recipient (i.e., a self-review).
+        if (reviewAssignmentsSet != null && reviewAssignmentsSet.size() > 0 &&
+            feedbackRequest.getRequesteeId().equals(feedbackRequest.getRecipientId())) {
+            sendSelfReviewCompletionEmailToReviewers(feedbackRequest, reviewAssignmentsSet);    
+        }        
+
         return storedRequest;
     }
 
     @Override
-    public Boolean delete(UUID id) {
+    public void delete(UUID id) {
         final Optional<FeedbackRequest> feedbackReq = feedbackReqRepository.findById(id);
         if (feedbackReq.isEmpty()) {
             throw new NotFoundException("No feedback request with id " + id);
         }
 
         if (!createIsPermitted(feedbackReq.get().getRequesteeId())) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         feedbackReqRepository.deleteById(id);
-        return true;
     }
 
     @Override
@@ -225,7 +276,7 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
         final UUID requesteeId = feedbackReq.get().getRequesteeId();
         final UUID recipientId = feedbackReq.get().getRecipientId();
         if (!getIsPermitted(requesteeId, recipientId, sendDate)) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         return feedbackReq.get();
@@ -235,11 +286,11 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
     public List<FeedbackRequest> findByValues(UUID creatorId, UUID requesteeId, UUID recipientId, LocalDate oldestDate, UUID reviewPeriodId, UUID templateId, List<UUID> requesteeIds) {
         final UUID currentUserId = currentUserServices.getCurrentUser().getId();
         if (currentUserId == null) {
-            throw new PermissionException("You are not authorized to do this operation");
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         List<FeedbackRequest> feedbackReqList = new ArrayList<>();
-        if(requesteeIds != null && !requesteeIds.isEmpty()) {
+        if (requesteeIds != null && !requesteeIds.isEmpty()) {
             LOG.debug("Finding feedback requests for {} requesteeIds.", requesteeIds.size());
             feedbackReqList.addAll(feedbackReqRepository.findByValues(Util.nullSafeUUIDToString(creatorId), Util.nullSafeUUIDToString(recipientId), oldestDate, Util.nullSafeUUIDToString(reviewPeriodId), Util.nullSafeUUIDToString(templateId), Util.nullSafeUUIDListToStringList(requesteeIds)));
         } else {
@@ -249,21 +300,22 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
         feedbackReqList = feedbackReqList.stream().filter((FeedbackRequest request) -> {
             boolean visible = false;
-            if(currentUserServices.isAdmin()){
+            if (currentUserServices.isAdmin()) {
                 visible = true;
-            } else if(request != null) {
-                if(currentUserId.equals(request.getCreatorId())) visible = true;
-                if(isSupervisor(request.getRequesteeId(), currentUserId)) visible = true;
-                if(currentUserId.equals(request.getRecipientId())) visible = true;
+            } else if (request != null) {
+                if (currentUserId.equals(request.getCreatorId())) visible = true;
+                if (isSupervisor(request.getRequesteeId(), currentUserId)) visible = true;
+                if (currentUserId.equals(request.getRecipientId())) visible = true;
             }
             return visible;
-        }).collect(Collectors.toList());
+        }).toList();
 
         return feedbackReqList;
     }
 
     private boolean isSupervisor(UUID requesteeId, UUID currentUserId) {
-        return requesteeId != null ? memberProfileServices.getSupervisorsForId(requesteeId).stream().filter((profile) -> currentUserId.equals(profile.getId())).findAny().isPresent() : false;
+        return requesteeId != null
+                && memberProfileServices.getSupervisorsForId(requesteeId).stream().anyMatch(profile -> currentUserId.equals(profile.getId()));
     }
 
     private boolean createIsPermitted(UUID requesteeId) {
@@ -306,12 +358,8 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
     private boolean updateSubmitDateIsPermitted(FeedbackRequest feedbackRequest) {
         boolean isAdmin = currentUserServices.isAdmin();
         UUID currentUserId = currentUserServices.getCurrentUser().getId();
-        if (isAdmin) {
+        if (isAdmin || (currentUserId.equals(feedbackRequest.getCreatorId()) && feedbackRequest.getSubmitDate() != null)) {
             return true;
-        } else if (currentUserId.equals(feedbackRequest.getCreatorId())) {
-            if (feedbackRequest.getSubmitDate() != null) {
-                return true;
-            }
         }
 
         return currentUserId.equals(feedbackRequest.getRecipientId());
@@ -325,5 +373,131 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
         feedbackRequest.setRecipientId(dto.getRecipientId());
 
         return feedbackRequest;
+    }
+
+    public void sendSelfReviewCompletionEmailToReviewers(FeedbackRequest feedbackRequest, Set<ReviewAssignment> reviewAssignmentSet) {
+        // Send an email to each reviewer.
+        reviewAssignmentSet.forEach(reviewAssignment -> {
+            MemberProfile memberProfileReviewer = memberProfileServices.getById(reviewAssignment.getReviewerId());
+            if (memberProfileReviewer != null &&
+                memberProfileReviewer.getWorkEmail() != null) {
+                sendSelfReviewCompletionEmail(feedbackRequest,
+                                              memberProfileReviewer,
+                                              CompletionEmailType.REVIEWERS);
+            }
+        });
+    }
+
+    public void sendSelfReviewCompletionEmailToSupervisor(FeedbackRequest feedbackRequest) {
+        MemberProfile currentUserProfile = currentUserServices.getCurrentUser();
+        try {
+            if (currentUserProfile.getSupervisorid() != null) {
+                MemberProfile supervisorProfile =
+                    memberProfileServices.getById(
+                        currentUserProfile.getSupervisorid());
+                sendSelfReviewCompletionEmail(feedbackRequest,
+                                              supervisorProfile,
+                                              CompletionEmailType.SUPERVISOR);
+            }
+        } catch (NotFoundException e) {
+            LOG.error("Supervisor could not be found for completion email");
+        }
+    }
+
+    private void sendSelfReviewCompletionEmail(FeedbackRequest feedbackRequest,
+                                               MemberProfile reviewer,
+                                               CompletionEmailType emailType) {
+        // Build the email contents.
+        Email email;
+        MemberProfile currentUserProfile = currentUserServices.getCurrentUser();
+        switch(emailType) {
+            case CompletionEmailType.REVIEWERS:
+                email = buildReviewerEmail(feedbackRequest, reviewer,
+                                           currentUserProfile);
+                break;
+            default:
+            case CompletionEmailType.SUPERVISOR:
+                email = buildSupervisorEmail(feedbackRequest, reviewer,
+                                             currentUserProfile);
+                break;
+        }
+
+        // Send the email.
+        try {
+            emailSender.sendEmail(null, null, email.getSubject(),
+                                  email.getContents(),
+                                  reviewer.getWorkEmail());
+        } catch (Exception e) {
+           LOG.error("Unable to send the self-review completion email.", e);
+        }
+    }
+
+    private ReviewPeriodInfo getSelfReviewInfo(
+                                 FeedbackRequest feedbackRequest, String name) {
+        String reviewPeriodString = "";
+        LocalDate closeDate = null;
+        if (feedbackRequest.getReviewPeriodId() != null) {
+            Optional<ReviewPeriod> reviewPeriodOpt = reviewPeriodRepository.findById(feedbackRequest.getReviewPeriodId());
+            if (reviewPeriodOpt.isPresent()) {
+                ReviewPeriod reviewPeriod = reviewPeriodOpt.get();
+                if (reviewPeriod.getCloseDate() != null) {
+                    closeDate = reviewPeriod.getCloseDate().toLocalDate();
+                }
+                reviewPeriodString = String.format(" for %s", reviewPeriod.getName());
+            }
+        }
+        return new ReviewPeriodInfo(
+                       String.format("%s has finished their self-review%s.",
+                                     name, reviewPeriodString), closeDate);
+    }
+
+    private Email buildReviewerEmail(FeedbackRequest feedbackRequest,
+                                     MemberProfile reviewerProfile,
+                                     MemberProfile currentUserProfile) {
+        String reviewerName = reviewerProfile.getFirstName();
+        String revieweeName = MemberProfileUtils.getFullName(currentUserProfile);
+        UUID requestId = feedbackRequest.getId();
+        String selfReviewURL = String.format("%s/feedback/view/responses/?request=%s", webURL, requestId == null ? "none" : requestId.toString());
+        ReviewPeriodInfo info = getSelfReviewInfo(feedbackRequest, revieweeName);
+        LocalDate closeDate = info.closeDate();
+        String ending = closeDate == null ? "the review period closes" :
+                 closeDate.format(DateTimeFormatter.ofPattern("MM/dd/yyyy"));
+
+        String body = String.format(templateToString(reviewerTemplate),
+                                    revieweeName, reviewerName, revieweeName,
+                                    selfReviewURL, ending);
+        Email email = new Email();
+        email.setSubject(info.subject());
+        email.setContents(body);
+        return email;
+    }
+
+    private Email buildSupervisorEmail(FeedbackRequest feedbackRequest,
+                                       MemberProfile supervisorProfile,
+                                       MemberProfile currentUserProfile) {
+        String supervisorName = supervisorProfile == null ? "Supervisor" :
+                                   supervisorProfile.getFirstName();
+        String revieweeName = MemberProfileUtils.getFullName(currentUserProfile);
+        UUID requestId = feedbackRequest.getId();
+        String selfReviewURL = String.format("%s/feedback/view/responses/?request=%s", webURL, requestId == null ? "none" : requestId.toString());
+        ReviewPeriodInfo info = getSelfReviewInfo(feedbackRequest, revieweeName);
+
+        String body = String.format(templateToString(supervisorTemplate),
+                                    supervisorName, revieweeName,
+                                    selfReviewURL);
+
+        Email email = new Email();
+        email.setSubject(info.subject());
+        email.setContents(body);
+        return email;
+    }
+
+    private String templateToString(Readable template) {
+        try {
+            return IOUtils.readText(new BufferedReader(template.asReader()));
+        } catch (Exception ex) {
+            LOG.error(ex.toString());
+            return "";
+        }
     }
 }
