@@ -1,53 +1,39 @@
 package com.objectcomputing.checkins.services.feedback_template.template_question;
 
-import java.net.URI;
-import java.util.List;
-import java.util.UUID;
-import java.util.concurrent.ExecutorService;
-import java.util.stream.Collectors;
-
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
-
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.http.HttpResponse;
-import io.micronaut.http.MediaType;
-import io.micronaut.http.annotation.*;
-import io.micronaut.scheduling.TaskExecutors;
+import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.Body;
-import io.micronaut.http.annotation.Consumes;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.annotation.Delete;
 import io.micronaut.http.annotation.Get;
 import io.micronaut.http.annotation.Post;
-import io.micronaut.http.annotation.Produces;
 import io.micronaut.http.annotation.Put;
+import io.micronaut.http.annotation.Status;
+import io.micronaut.scheduling.TaskExecutors;
+import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.rules.SecurityRule;
-import io.netty.channel.EventLoopGroup;
+import io.micronaut.validation.Validated;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.inject.Named;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Scheduler;
-import reactor.core.scheduler.Schedulers;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
+
+import java.net.URI;
+import java.util.List;
+import java.util.UUID;
 
 @Controller("/services/feedback/template_questions")
+@ExecuteOn(TaskExecutors.BLOCKING)
 @Secured(SecurityRule.IS_AUTHENTICATED)
-@Consumes(MediaType.APPLICATION_JSON)
-@Produces(MediaType.APPLICATION_JSON)
 @Tag(name = "template_questions")
+@Validated
 public class TemplateQuestionController {
 
     private final TemplateQuestionServices templateQuestionServices;
-    private final EventLoopGroup eventLoopGroup;
-    private final Scheduler scheduler;
 
-    public TemplateQuestionController(TemplateQuestionServices templateQuestionServices,
-                                      EventLoopGroup eventLoopGroup,
-                                      @Named(TaskExecutors.IO) ExecutorService executorService) {
+    public TemplateQuestionController(TemplateQuestionServices templateQuestionServices) {
         this.templateQuestionServices = templateQuestionServices;
-        this.eventLoopGroup = eventLoopGroup;
-        this.scheduler = Schedulers.fromExecutorService(executorService);
     }
 
     /**
@@ -56,14 +42,11 @@ public class TemplateQuestionController {
      * @param requestBody {@link TemplateQuestionCreateDTO} The feedback question to create
      * @return {@link TemplateQuestionResponseDTO}
      */
-    @Post()
-    public Mono<HttpResponse<TemplateQuestionResponseDTO>> save(@Body @Valid @NotNull TemplateQuestionCreateDTO requestBody) {
-        return Mono.fromCallable(() -> templateQuestionServices.save(fromDTO(requestBody)))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedFeedbackQuestion -> (HttpResponse<TemplateQuestionResponseDTO>) HttpResponse
-                        .created(fromEntity(savedFeedbackQuestion))
-                        .headers(headers -> headers.location(URI.create("/template_questions/" + savedFeedbackQuestion.getId()))))
-                .subscribeOn(scheduler);
+    @Post
+    public HttpResponse<TemplateQuestionResponseDTO> save(@Body @Valid @NotNull TemplateQuestionCreateDTO requestBody) {
+        TemplateQuestion savedFeedbackQuestion = templateQuestionServices.save(fromDTO(requestBody));
+        return HttpResponse.created(fromEntity(savedFeedbackQuestion))
+                .headers(headers -> headers.location(URI.create("/template_questions/" + savedFeedbackQuestion.getId())));
     }
 
     /**
@@ -72,15 +55,11 @@ public class TemplateQuestionController {
      * @param requestBody {@link TemplateQuestionUpdateDTO} The updated template question
      * @return {@link TemplateQuestionResponseDTO}
      */
-    @Put()
-    public Mono<HttpResponse<TemplateQuestionResponseDTO>> update(@Body @Valid @NotNull TemplateQuestionUpdateDTO requestBody) {
-        return Mono.fromCallable(() -> templateQuestionServices.update(fromDTO(requestBody)))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedFeedbackTemplateQ -> (HttpResponse<TemplateQuestionResponseDTO>) HttpResponse
-                        .ok()
-                        .headers(headers -> headers.location(URI.create("/template_questions/" + savedFeedbackTemplateQ.getId())))
-                        .body(fromEntity(savedFeedbackTemplateQ)))
-                .subscribeOn(scheduler);
+    @Put
+    public HttpResponse<TemplateQuestionResponseDTO> update(@Body @Valid @NotNull TemplateQuestionUpdateDTO requestBody) {
+        TemplateQuestion savedFeedbackTemplateQ = templateQuestionServices.update(fromDTO(requestBody));
+        return HttpResponse.ok(fromEntity(savedFeedbackTemplateQ))
+                .headers(headers -> headers.location(URI.create("/template_questions/" + savedFeedbackTemplateQ.getId())));
     }
 
     /**
@@ -90,10 +69,9 @@ public class TemplateQuestionController {
      * @return {Boolean}
      */
     @Delete("/{id}")
-    public HttpResponse<?> deleteTemplateQuestion(@NotNull UUID id) {
+    @Status(HttpStatus.OK)
+    public void deleteTemplateQuestion(@NotNull UUID id) {
         templateQuestionServices.delete(id);
-        return HttpResponse
-                .ok();
     }
 
     /**
@@ -103,13 +81,10 @@ public class TemplateQuestionController {
      * @return {@link TemplateQuestionResponseDTO}
      */
     @Get("/{id}")
-    public Mono<HttpResponse<TemplateQuestionResponseDTO>> getById(UUID id) {
-        return Mono.fromCallable(() -> templateQuestionServices.getById(id))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(feedbackQuestion -> (HttpResponse<TemplateQuestionResponseDTO>) HttpResponse
-                        .ok(fromEntity(feedbackQuestion))
-                        .headers(headers -> headers.location(URI.create("/template_questions/" + feedbackQuestion.getId()))))
-                .subscribeOn(scheduler);
+    public HttpResponse<TemplateQuestionResponseDTO> getById(UUID id) {
+        TemplateQuestion feedbackQuestion = templateQuestionServices.getById(id);
+        return feedbackQuestion == null ? HttpResponse.notFound() : HttpResponse.ok(fromEntity(feedbackQuestion))
+                .headers(headers -> headers.location(URI.create("/template_questions/" + feedbackQuestion.getId())));
     }
 
     /**
@@ -119,18 +94,15 @@ public class TemplateQuestionController {
      * @return list of {@link TemplateQuestionResponseDTO}
      */
     @Get("/{?templateId}")
-    public Mono<HttpResponse<List<TemplateQuestionResponseDTO>>> findByValues(@Nullable UUID templateId) {
-        return Mono.fromCallable(() -> templateQuestionServices.findByFields(templateId))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(templateQuestions -> {
-                    List<TemplateQuestionResponseDTO> dtoList = templateQuestions.stream()
-                            .map(this::fromEntity).collect(Collectors.toList());
-                    return (HttpResponse<List<TemplateQuestionResponseDTO>>) HttpResponse.ok(dtoList);
-                }).subscribeOn(scheduler);
+    public List<TemplateQuestionResponseDTO> findByValues(@Nullable UUID templateId) {
+        return templateQuestionServices.findByFields(templateId)
+                .stream()
+                .map(this::fromEntity).toList();
     }
 
     /**
      * Converts a {@link TemplateQuestionCreateDTO} into a {@link TemplateQuestion}
+     *
      * @param dto {@link TemplateQuestionCreateDTO}
      * @return {@link TemplateQuestion}
      */
@@ -140,6 +112,7 @@ public class TemplateQuestionController {
 
     /**
      * Converts a {@link TemplateQuestionUpdateDTO} into a {@link TemplateQuestion}
+     *
      * @param dto {@link TemplateQuestionUpdateDTO}
      * @return {@link TemplateQuestion}
      */
@@ -149,6 +122,7 @@ public class TemplateQuestionController {
 
     /**
      * Converts a {@link TemplateQuestion} into a {@link TemplateQuestionResponseDTO}
+     *
      * @param templateQuestion {@link TemplateQuestion}
      * @return {@link TemplateQuestionResponseDTO}
      */
