@@ -1,58 +1,40 @@
 package com.objectcomputing.checkins.services.memberprofile;
 
+import com.objectcomputing.checkins.services.permissions.Permission;
 import com.objectcomputing.checkins.services.permissions.RequiredPermission;
-import com.objectcomputing.checkins.security.permissions.Permissions;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.http.HttpResponse;
-import io.micronaut.http.MediaType;
+import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.Body;
-import io.micronaut.http.annotation.Consumes;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.annotation.Delete;
 import io.micronaut.http.annotation.Get;
 import io.micronaut.http.annotation.Post;
-import io.micronaut.http.annotation.Produces;
 import io.micronaut.http.annotation.Put;
 import io.micronaut.http.annotation.QueryValue;
+import io.micronaut.http.annotation.Status;
 import io.micronaut.scheduling.TaskExecutors;
+import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.rules.SecurityRule;
-import io.netty.channel.EventLoopGroup;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 
-import jakarta.inject.Named;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Scheduler;
-import reactor.core.scheduler.Schedulers;
-
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
 import java.net.URI;
 import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.ExecutorService;
-import java.util.stream.Collectors;
 
 @Controller("/services/member-profiles")
+@ExecuteOn(TaskExecutors.BLOCKING)
 @Secured(SecurityRule.IS_AUTHENTICATED)
-@Produces(MediaType.APPLICATION_JSON)
-@Consumes(MediaType.APPLICATION_JSON)
 @Tag(name = "member profiles")
 public class MemberProfileController {
 
-    private static final Logger LOG = LoggerFactory.getLogger(MemberProfileController.class);
     private final MemberProfileServices memberProfileServices;
-    private final EventLoopGroup eventLoopGroup;
-    private final Scheduler scheduler;
 
-    public MemberProfileController(MemberProfileServices memberProfileServices,
-                                   EventLoopGroup eventLoopGroup,
-                                   @Named(TaskExecutors.IO) ExecutorService ioExecutorService) {
+    public MemberProfileController(MemberProfileServices memberProfileServices) {
         this.memberProfileServices = memberProfileServices;
-        this.eventLoopGroup = eventLoopGroup;
-        this.scheduler = Schedulers.fromExecutorService(ioExecutorService);
     }
 
     /**
@@ -62,14 +44,10 @@ public class MemberProfileController {
      * @return {@link MemberProfileResponseDTO} Returned member profile
      */
     @Get("/{id}")
-    public Mono<HttpResponse<MemberProfileResponseDTO>> getById(UUID id) {
-
-        return Mono.fromCallable(() -> memberProfileServices.getById(id))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(memberProfile -> (HttpResponse<MemberProfileResponseDTO>) HttpResponse
-                        .ok(fromEntity(memberProfile))
-                        .headers(headers -> headers.location(location(memberProfile.getId()))))
-                .subscribeOn(scheduler);
+    public HttpResponse<MemberProfileResponseDTO> getById(UUID id) {
+        MemberProfile memberProfile = memberProfileServices.getById(id);
+        return HttpResponse.ok(fromEntity(memberProfile))
+                .headers(headers -> headers.location(location(memberProfile.getId())));
     }
 
     /**
@@ -79,47 +57,36 @@ public class MemberProfileController {
      * @return {@link List<MemberProfileResponseDTO>} List of the profiles for the supervisors of the requested member
      */
     @Get("/{id}/supervisors")
-    public Mono<HttpResponse<List<MemberProfileResponseDTO>>> getSupervisorsForId(UUID id) {
-
-        return Mono.fromCallable(() -> memberProfileServices.getSupervisorsForId(id))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(memberProfiles -> {
-                    List<MemberProfileResponseDTO> dtoList = memberProfiles.stream()
-                            .map(this::fromEntity).collect(Collectors.toList());
-                    return (HttpResponse<List<MemberProfileResponseDTO>>) HttpResponse
-                            .ok(dtoList);
-
-                }).subscribeOn(scheduler);
+    public List<MemberProfileResponseDTO> getSupervisorsForId(UUID id) {
+        return memberProfileServices.getSupervisorsForId(id)
+                .stream()
+                .map(this::fromEntity)
+                .toList();
     }
 
     /**
      * Find member profile by first name, last name, title, leader's ID, email, supervisor's ID or find all.
      *
-     * @param firstName {@link String} Find members with the given first name
-     * @param lastName {@link String} Find member with the given last name
-     * @param title {@link String} Find member
-     * @param pdlId {@link UUID} ID of the leader
-     * @param workEmail {@link String} Requested work email
+     * @param firstName    {@link String} Find members with the given first name
+     * @param lastName     {@link String} Find member with the given last name
+     * @param title        {@link String} Find member
+     * @param pdlId        {@link UUID} ID of the leader
+     * @param workEmail    {@link String} Requested work email
      * @param supervisorId {@link UUID} ID of the supervisor
      * @return {@link List<MemberProfileResponseDTO>} List of members that match the input parameters
      */
     @Get("/{?firstName,lastName,title,pdlId,workEmail,supervisorId,terminated}")
-    public Mono<HttpResponse<List<MemberProfileResponseDTO>>> findByValue(@Nullable String firstName,
-                                                                            @Nullable String lastName,
-                                                                            @Nullable String title,
-                                                                            @Nullable UUID pdlId,
-                                                                            @Nullable String workEmail,
-                                                                            @Nullable UUID supervisorId,
-                                                                            @QueryValue(value = "terminated" , defaultValue = "false") Boolean terminated) {
-        return Mono.fromCallable(() -> memberProfileServices.findByValues(firstName, lastName, title, pdlId, workEmail, supervisorId, terminated))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(memberProfiles -> {
-                    List<MemberProfileResponseDTO> dtoList = memberProfiles.stream()
-                            .map(this::fromEntity).collect(Collectors.toList());
-                    return (HttpResponse<List<MemberProfileResponseDTO>>) HttpResponse
-                            .ok(dtoList);
-
-                }).subscribeOn(scheduler);
+    public List<MemberProfileResponseDTO> findByValue(@Nullable String firstName,
+                                                      @Nullable String lastName,
+                                                      @Nullable String title,
+                                                      @Nullable UUID pdlId,
+                                                      @Nullable String workEmail,
+                                                      @Nullable UUID supervisorId,
+                                                      @QueryValue(value = "terminated", defaultValue = "false") Boolean terminated) {
+        return memberProfileServices.findByValues(firstName, lastName, title, pdlId, workEmail, supervisorId, terminated)
+                .stream()
+                .map(this::fromEntity)
+                .toList();
     }
 
     /**
@@ -128,16 +95,12 @@ public class MemberProfileController {
      * @param memberProfile {@link MemberProfileCreateDTO} Information of the member profile being created
      * @return {@link MemberProfileResponseDTO} The created member profile
      */
-    @Post()
-    @RequiredPermission(Permissions.CAN_CREATE_ORGANIZATION_MEMBERS)
-    public Mono<HttpResponse<MemberProfileResponseDTO>> save(@Body @Valid MemberProfileCreateDTO memberProfile) {
-
-        return Mono.fromCallable(() -> memberProfileServices.saveProfile(fromDTO(memberProfile)))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedProfile -> (HttpResponse<MemberProfileResponseDTO>) HttpResponse
-                        .created(fromEntity(savedProfile))
-                        .headers(headers -> headers.location(location(savedProfile.getId()))))
-                .subscribeOn(scheduler);
+    @Post
+    @RequiredPermission(Permission.CAN_CREATE_ORGANIZATION_MEMBERS)
+    public HttpResponse<MemberProfileResponseDTO> save(@Body @Valid MemberProfileCreateDTO memberProfile) {
+        MemberProfile savedProfile = memberProfileServices.saveProfile(fromDTO(memberProfile));
+        return HttpResponse.created(fromEntity(savedProfile))
+                .headers(headers -> headers.location(location(savedProfile.getId())));
     }
 
     /**
@@ -146,34 +109,23 @@ public class MemberProfileController {
      * @param memberProfile {@link MemberProfileUpdateDTO} Information of the member profile being updated
      * @return {@link MemberProfileResponseDTO} The updated member profile
      */
-    @Put()
-    public Mono<HttpResponse<MemberProfileResponseDTO>> update(@Body @Valid MemberProfileUpdateDTO memberProfile) {
-
-        return Mono.fromCallable(() -> memberProfileServices.saveProfile(fromDTO(memberProfile)))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(savedProfile -> {
-                    MemberProfileResponseDTO updatedMemberProfile = fromEntity(savedProfile);
-                    return (HttpResponse<MemberProfileResponseDTO>) HttpResponse
-                            .ok()
-                            .headers(headers -> headers.location(location(updatedMemberProfile.getId())))
-                            .body(updatedMemberProfile);
-                })
-                .subscribeOn(scheduler);
+    @Put
+    public HttpResponse<MemberProfileResponseDTO> update(@Body @Valid MemberProfileUpdateDTO memberProfile) {
+        MemberProfile savedProfile = memberProfileServices.saveProfile(fromDTO(memberProfile));
+        return HttpResponse.ok(fromEntity(savedProfile))
+                .headers(headers -> headers.location(location(savedProfile.getId())));
     }
 
     /**
      * Delete a member profile
      *
      * @param id {@link UUID} Member unique id
-     * @return
      */
     @Delete("/{id}")
-    @RequiredPermission(Permissions.CAN_DELETE_ORGANIZATION_MEMBERS)
-    public Mono<HttpResponse> delete(@NotNull UUID id) {
-        return Mono.fromCallable(() -> memberProfileServices.deleteProfile(id))
-                .publishOn(Schedulers.fromExecutor(eventLoopGroup))
-                .map(successFlag -> (HttpResponse) HttpResponse.ok())
-                .subscribeOn(scheduler);
+    @RequiredPermission(Permission.CAN_DELETE_ORGANIZATION_MEMBERS)
+    @Status(HttpStatus.OK)
+    public void delete(@NotNull UUID id) {
+        memberProfileServices.deleteProfile(id);
     }
 
     protected URI location(UUID id) {
@@ -198,6 +150,7 @@ public class MemberProfileController {
         dto.setSupervisorid(entity.getSupervisorid());
         dto.setTerminationDate(entity.getTerminationDate());
         dto.setBirthDay(entity.getBirthDate());
+        dto.setLastSeen(entity.getLastSeen());
         return dto;
     }
 
@@ -205,13 +158,13 @@ public class MemberProfileController {
         return new MemberProfile(dto.getId(), dto.getFirstName(), dto.getMiddleName(), dto.getLastName(),
                 dto.getSuffix(), dto.getTitle(), dto.getPdlId(), dto.getLocation(), dto.getWorkEmail(),
                 dto.getEmployeeId(), dto.getStartDate(), dto.getBioText(), dto.getSupervisorid(),
-                dto.getTerminationDate(),dto.getBirthDay(), dto.getVoluntary(), dto.getExcluded());
+                dto.getTerminationDate(), dto.getBirthDay(), dto.getVoluntary(), dto.getExcluded(), dto.getLastSeen());
     }
 
     private MemberProfile fromDTO(MemberProfileCreateDTO dto) {
         return new MemberProfile(dto.getFirstName(), dto.getMiddleName(), dto.getLastName(), dto.getSuffix(),
                 dto.getTitle(), dto.getPdlId(), dto.getLocation(), dto.getWorkEmail(), dto.getEmployeeId(),
                 dto.getStartDate(), dto.getBioText(), dto.getSupervisorid(), dto.getTerminationDate(), dto.getBirthDay(),
-                dto.getVoluntary(), dto.getExcluded());
+                dto.getVoluntary(), dto.getExcluded(), dto.getLastSeen());
     }
 }
