@@ -3,43 +3,31 @@ package com.objectcomputing.checkins.services.memberprofile.anniversaryreport;
 import com.objectcomputing.checkins.exceptions.PermissionException;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileServices;
-import com.objectcomputing.checkins.services.memberprofile.currentuser.CurrentUserServices;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import io.micronaut.core.annotation.Nullable;
 import jakarta.inject.Singleton;
+
 import java.math.RoundingMode;
 import java.text.DecimalFormat;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Singleton
 public class AnniversaryReportServicesImpl implements AnniversaryServices {
-    private static final Logger LOG = LoggerFactory.getLogger(AnniversaryReportServicesImpl.class);
-    private final MemberProfileServices memberProfileServices;
-    private final CurrentUserServices currentUserServices;
 
-    public AnniversaryReportServicesImpl(MemberProfileServices memberProfileServices,
-            CurrentUserServices currentUserServices) {
+    private final MemberProfileServices memberProfileServices;
+
+    public AnniversaryReportServicesImpl(MemberProfileServices memberProfileServices) {
         this.memberProfileServices = memberProfileServices;
-        this.currentUserServices = currentUserServices;
     }
 
     @Override
     public List<AnniversaryReportResponseDTO> findByValue(@Nullable String[] months) {
-        if (!currentUserServices.isAdmin()) {
-            throw new PermissionException("You do not have permission to access this resource.");
-        }
-
         List<MemberProfile> memberProfileAll = new ArrayList<>();
         Set<MemberProfile> memberProfiles = memberProfileServices.findByValues(null, null, null, null, null, null,
                 false);
-        LOG.info(memberProfiles.toString());
+
         if (months != null) {
             for (String month : months) {
                 List<MemberProfile> memberProfile = new ArrayList<>();
@@ -49,7 +37,7 @@ public class AnniversaryReportServicesImpl implements AnniversaryServices {
                             .filter(member -> member.getStartDate() != null
                                     && month.equalsIgnoreCase(member.getStartDate().getMonth().name())
                                     && member.getTerminationDate() == null)
-                            .collect(Collectors.toList());
+                            .toList();
                 }
                 memberProfileAll.addAll(memberProfile);
             }
@@ -67,7 +55,7 @@ public class AnniversaryReportServicesImpl implements AnniversaryServices {
                 .stream()
                 .filter(member -> member.getStartDate() != null
                         && today.getMonthValue() == member.getStartDate().getMonthValue())
-                .collect(Collectors.toList());
+                .toList();
         return profileToAnniversaryResponseDto(results);
     }
 
