@@ -1,41 +1,45 @@
 package com.objectcomputing.checkins.services.memberprofile.currentuser;
 
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
+import com.objectcomputing.checkins.services.memberprofile.MemberProfileServices;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileUtils;
 import com.objectcomputing.checkins.services.permissions.Permission;
-import com.objectcomputing.checkins.services.permissions.PermissionServices;
 import com.objectcomputing.checkins.services.role.Role;
 import com.objectcomputing.checkins.services.role.RoleServices;
+import com.objectcomputing.checkins.services.role.role_permissions.RolePermissionServices;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
 import io.micronaut.http.annotation.Get;
+import io.micronaut.scheduling.TaskExecutors;
+import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.authentication.Authentication;
 import io.micronaut.security.rules.SecurityRule;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
-import io.micronaut.core.annotation.Nullable;
 import java.net.URI;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Controller("/services/member-profiles/current")
+@ExecuteOn(TaskExecutors.BLOCKING)
 @Secured(SecurityRule.IS_AUTHENTICATED)
 @Tag(name = "current user")
 public class CurrentUserController {
 
     private final CurrentUserServices currentUserServices;
     private final RoleServices roleServices;
-    private final PermissionServices permissionServices;
+    private final RolePermissionServices rolePermissionServices;
+    private final MemberProfileServices memberProfileServices;
 
-    public CurrentUserController(CurrentUserServices currentUserServices,
-                                 RoleServices roleServices, PermissionServices permissionServices) {
+    public CurrentUserController(CurrentUserServices currentUserServices, RoleServices roleServices, RolePermissionServices rolePermissionServices, MemberProfileServices memberProfileServices) {
         this.currentUserServices = currentUserServices;
         this.roleServices = roleServices;
-        this.permissionServices = permissionServices;
-
+        this.rolePermissionServices = rolePermissionServices;
+        this.memberProfileServices = memberProfileServices;
     }
 
     /**
@@ -58,10 +62,13 @@ public class CurrentUserController {
         String lastName = name != null ? name.substring(name.indexOf(' ') + 1).trim() : "";
 
         MemberProfile user = currentUserServices.findOrSaveUser(firstName, lastName, workEmail);
-        List<Permission> permissions = permissionServices.findUserPermissions(user.getId());
+
+        user.setLastSeen(LocalDate.now());
+        memberProfileServices.updateProfile(user);
+        List<Permission> permissions = rolePermissionServices.findUserPermissions(user.getId());
 
         Set<Role> roles = roleServices.findUserRoles(user.getId());
-        List<String> rolesAsString = roles.stream().map(o -> o.getRole()).collect(Collectors.toList());
+        List<String> rolesAsString = roles.stream().map(Role::getRole).toList();
 
         return HttpResponse
                 .ok()
